# 6dof-graspnet

./: .gitattributes  .gitignore  LICENSE  README.md  TRAINED_MODEL_LICENSE  Update data link  compile_pointnet_tfops.sh  eval.py  example.md  grasp_data_reader.py  grasp_estimator.py  object_renderer.py  online_object_renderer.py  requirements.txt  sample.py  shapenet_ids.txt  surface_normal.py  tf_utils.py  train.py  utils.py  visualization_utils.py
PySide-1.2.4/sources/pyside-tools/: AUTHORS  CMakeLists.txt  LICENSE-uic  cmake_uninstall.cmake  pyside-uic
PySide-1.2.4/sources/pyside-tools/pylupdate/: CMakeLists.txt  fetchtr.cpp  main.cpp  merge.cpp  metatranslator.cpp  metatranslator.h  numberh.cpp  proparser.cpp  proparser.h  pyside-lupdate.1  sametexth.cpp  simtexth.cpp  simtexth.h  translator.cpp  translator.h
PySide-1.2.4/sources/pyside-tools/pyrcc/: CMakeLists.txt  main.cpp  pyside-rcc.1  rcc.cpp  rcc.h
PySide-1.2.4/sources/pyside-tools/pysideuic/: __init__.py.in  driver.py  exceptions.py  icon_cache.py  objcreator.py  properties.py  pyside-uic.1  uiparser.py
PySide-1.2.4/sources/pyside-tools/pysideuic/Compiler/: __init__.py  compiler.py  indenter.py  misc.py  proxy_type.py  qobjectcreator.py  qtproxies.py
PySide-1.2.4/sources/pyside-tools/pysideuic/port_v2/: __init__.py  as_string.py  ascii_upper.py  invoke.py  load_plugin.py  proxy_base.py  string_io.py
PySide-1.2.4/sources/pyside-tools/pysideuic/port_v3/: as_string.py  ascii_upper.py  invoke.py  load_plugin.py  proxy_base.py  string_io.py
PySide-1.2.4/sources/pyside-tools/pysideuic/widget-plugins/: phonon.py  qtdeclarative.py  qtwebkit.py
PySide-1.2.4/sources/pyside-tools/tests/: CMakeLists.txt  qwizard_test.ui
PySide-1.2.4/sources/pyside-tools/tests/rcc/: CMakeLists.txt  example.qrc  image.qrc  manychars.txt  rcc_image_test.py  rcc_test.py  run_test.sh  shining.txt  words.txt
PySide-1.2.4/sources/shiboken/: .gitattributes  AUTHORS  CMakeLists.txt  COPYING.libsample  Doxyfile  generatorrunnerconfig.h.in  generatorrunnermacros.h  main.cpp
PySide-1.2.4/sources/shiboken/ApiExtractor/: AUTHORS  CMakeLists.txt  COPYING  abstractmetabuilder.cpp  abstractmetabuilder.h  abstractmetalang.cpp  abstractmetalang.h  apiextractor.cpp  apiextractor.h  apiextractormacros.h  asttoxml.cpp  asttoxml.h  docparser.cpp  docparser.h  doxygenparser.cpp  doxygenparser.h  fileout.cpp  fileout.h  generator.qrc  graph.cpp  graph.h  icecc.cmake  include.cpp  include.h  merge.xsl  qtdocparser.cpp  qtdocparser.h  reporthandler.cpp  reporthandler.h  typedatabase.cpp  typedatabase.h  typeparser.cpp  typeparser.h  typesystem.cpp  typesystem.h  typesystem_p.h
PySide-1.2.4/sources/shiboken/ApiExtractor/doc/: CMakeLists.txt  conf.py.in  contents.rst  overview.rst  ownership.rst  typesystem.rst  typesystem_arguments.rst  typesystem_conversionrule.rst  typesystem_documentation.rst  typesystem_manipulating_objects.rst  typesystem_modify_function.rst  typesystem_solving_compilation.rst  typesystem_specifying_types.rst  typesystem_templates.rst
PySide-1.2.4/sources/shiboken/ApiExtractor/parser/: ast.cpp  ast.h  binder.cpp  binder.h  class_compiler.cpp  class_compiler.h  codemodel.cpp  codemodel.h  codemodel_finder.cpp  codemodel_finder.h  codemodel_fwd.h  codemodel_pointer.h  compiler_utils.cpp  compiler_utils.h  control.cpp  control.h  declarator_compiler.cpp  declarator_compiler.h  default_visitor.cpp  default_visitor.h  dumptree.cpp  dumptree.h  lexer.cpp  lexer.h  list.cpp  list.h  name_compiler.cpp  name_compiler.h  parser.cpp  parser.h  r++.macros  rpp-allocator.h  rxx_allocator.h  smallobject.cpp  smallobject.h  symbol.h  tokens.cpp  tokens.h  type_compiler.cpp  type_compiler.h  (+2 more)
PySide-1.2.4/sources/shiboken/ApiExtractor/tests/: CMakeLists.txt  a.xml  testabstractmetaclass.cpp  testabstractmetaclass.h  testabstractmetatype.cpp  testabstractmetatype.h  testaddfunction.cpp  testaddfunction.h  testarrayargument.cpp  testarrayargument.h  testcodeinjection.cpp  testcodeinjection.h  testcontainer.cpp  testcontainer.h  testconversionoperator.cpp  testconversionoperator.h  testconversionruletag.cpp  testconversionruletag.h  testctorinformation.cpp  testctorinformation.h  testdroptypeentries.cpp  testdroptypeentries.h  testdtorinformation.cpp  testdtorinformation.h  testenum.cpp  testenum.h  testextrainclude.cpp  testextrainclude.h  testfunctiontag.cpp  testfunctiontag.h  testimplicitconversions.cpp  testimplicitconversions.h  testinserttemplate.cpp  testinserttemplate.h  testmodifydocumentation.cpp  testmodifydocumentation.h  (+38 more)
PySide-1.2.4/sources/shiboken/data/: CMakeLists.txt  GeneratorRunnerConfig.cmake.in  GeneratorRunnerConfigVersion.cmake.in  ShibokenConfig-spec.cmake.in  ShibokenConfig.cmake.in  ShibokenConfigVersion.cmake.in  docgenerator.1  generatorrunner.1  generatorrunner.pc.in  shiboken.pc.in
PySide-1.2.4/sources/shiboken/doc/: CMakeLists.txt  codeinjectionsemantics.rst  commandlineoptions.rst  conf.py.in  contents.rst  faq.rst  overview.rst  ownership.rst  projectfile.rst  sequenceprotocol.rst  shiboken.1  shibokenmodule.rst  typeconverters.rst  typesystemvariables.rst  wordsofadvice.rst
PySide-1.2.4/sources/shiboken/generator/: CMakeLists.txt  generator.cpp  generator.h  main.cpp  shibokenconfig.h.in
PySide-1.2.4/sources/shiboken/libshiboken/: CMakeLists.txt  autodecref.h  basewrapper.cpp  basewrapper.h  basewrapper_p.h  bindingmanager.cpp  bindingmanager.h  conversions.h  debugfreehook.cpp  debugfreehook.h  gilstate.cpp  gilstate.h  helper.cpp  helper.h  python25compat.h  sbkconverter.cpp  sbkconverter.h  sbkconverter_p.h  sbkdbg.h  sbkenum.cpp  sbkenum.h  sbkmodule.cpp  sbkmodule.h  sbkpython.h  sbkstring.cpp  sbkstring.h  sbkversion.h.in  shiboken.h  shibokenbuffer.cpp  shibokenbuffer.h  shibokenmacros.h  threadstatesaver.cpp  threadstatesaver.h  typeresolver.cpp  typeresolver.h
PySide-1.2.4/sources/shiboken/shibokenmodule/: CMakeLists.txt  shibokenmodule.txt.in  typesystem_shiboken.xml
PySide-1.2.4/sources/shiboken/tests/: CMakeLists.txt  py3k.py  py3kcompat.py  sphinxtabletest.cpp  sphinxtabletest.h
(+1923 files in other folders)
